# aoc-rs

./: .gitignore  Cargo.toml  README.md
2022/: 13.rs
2022/day13/: Cargo.toml
2022/day13/src/: main.rs  p1.rs  p2.rs
2022/day14/: Cargo.toml
2022/day14/src/: main.rs  p1.rs  p2.rs
2022/day15/: Cargo.toml
2022/day15/src/: main.rs  p1.rs  p2.rs
2022/day16/: Cargo.toml  graph.dot
2022/day16/src/: main.rs  p1.rs  p2.rs
2022/day8/: Cargo.toml
2022/day8/src/: main.rs  p1.rs  p2.rs
2022/day9/: Cargo.toml
2022/day9/src/: main.rs  p1.rs  p2.rs
2023/day7/: Cargo.toml
2023/day7/src/: main.rs
2024/day10/: Cargo.toml
2024/day10/src/: main.rs  p1.rs  p2.rs
2024/day11/: Cargo.toml
2024/day11/src/: main.rs  (+2 more)
2024/day12/: Cargo.toml
2024/day13/: Cargo.toml
2024/day14/: .gitignore  Cargo.toml
2024/day15/: Cargo.toml
2024/day16/: Cargo.toml
2024/day17/: Cargo.toml
2024/day18/: Cargo.toml
2024/day19/: Cargo.toml
2024/day20/: Cargo.toml
2024/day21/: Cargo.toml
2024/day22/: Cargo.toml
2024/day23/: Cargo.toml
2024/day24/: Cargo.toml
2024/day25/: Cargo.toml
2024/day8/: Cargo.toml
2024/day9/: Cargo.toml
2025/day02/: Cargo.toml
2025/day03/: Cargo.toml
2025/day04/: Cargo.toml
2025/day05/: Cargo.toml
2025/day06/: Cargo.toml
2025/day07/: Cargo.toml
2025/day08/: Cargo.toml
2025/day09/: Cargo.toml
2025/day1/: Cargo.toml
2025/day10/: Cargo.toml  asdf.txt
2025/day11/: Cargo.toml  output.txt  thing.dot
2025/day12/: Cargo.toml
utils/: Cargo.toml
utils/src/: cartes.rs  lib.rs  linalg.rs  num.rs  optim.rs  reading.rs
(+94 files in other folders)
