[workspace]

members = [
	"utils",
	"2024/day1",
	"2024/day2",
	"2024/day3",
	"2024/day4",
	"2024/day5",
	"2024/day6",
	"2024/day7",
	"2024/day8",
	"2024/day9",
	"2024/day10",
	"2024/day11",
	"2024/day12",
	"2024/day13",
	"2024/day14",
	"2024/day15",
	"2024/day16",
	"2024/day17",
	"2024/day18",
	"2024/day19",
	"2024/day20",
	"2024/day21",
	"2024/day22",
	"2024/day23",
	"2024/day24",
	"2024/day25",
	"2022/day8",
	"2022/day9",
	"2022/day13",
	"2022/day14",
	"2022/day15",
	"2022/day16",
	"2025/day01",
	"2025/day02",
	"2025/day03",
	"2025/day04",
	"2025/day05",
	"2025/day06",
	"2025/day07", 
	"2025/day08",
	"2025/day09", 
	"2025/day11", 
]
resolver = "3"
